Fix black dark mode on mobile

--- a/src/app/mobile.scss
+++ b/src/app/mobile.scss
@@ -30,6 +30,7 @@ body.is-mobile {
   --view-bottom-fade-opacity: 0;
 
   --mobile-sidebar-background: var(--background-secondary);
+  --settings-background: var(--modal-sidebar-background);
 
   --tab-switcher-menubar-background: var(--background-secondary);
   --tab-switcher-preview-radius: var(--radius-m);
