--- a/src/layouts/frame.scss
+++ b/src/layouts/frame.scss
@@ -97,7 +97,7 @@ body.layout-frame.is-tablet {
   &.contrast-dark-black-mobile.theme-dark {
     .mod-root,
     .workspace-drawer {
-      background-color: transparent;
+      background-color: black;
     }
   }
 
